# StorageRoom

backend/: pyproject.toml
backend/api/: config.py
backend/api/api/: settings.py
backend/api/app_config/: asgi.py  settings.py  urls.py  wsgi.py
backend/api/applications/: middlewares.py
backend/api/applications/oauth/: apps.py  models.py  serializers.py  urls.py  views.py
backend/api/applications/oauth/services/oauth2/: __init__.py  applications.py  core.py  decorators.py  enums.py  strategies.py
backend/api/applications/storages/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/api/applications/users/: middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthSecurity.tsx
frontend/src/pages/: AppRouter.tsx  Auth.tsx  Error404.tsx  Main.tsx  Profile.tsx  SignUp.tsx
